RESOLVED FIXED143912
Web Inspector: REGRESSION: dragged node in the DOM Tree isn't positioned correctly
https://bugs.webkit.org/show_bug.cgi?id=143912
Summary Web Inspector: REGRESSION: dragged node in the DOM Tree isn't positioned corr...
Nikita Vasilyev
Reported 2015-04-17 20:41:34 PDT
Created attachment 251080 [details] Animated GIF of the problem See attached animated GIF. Steps: 1. Open Resources -> DOM Tree on any page that 2. Expand the tree deep enough to make it scrollable 3. Start dragging node Expected: The "ghost" node should be positioned right next to the mouse cursor. Actual: The ghost node’s top position is off.
Attachments
Animated GIF of the problem (2.12 MB, image/gif)
2015-04-17 20:41 PDT, Nikita Vasilyev
no flags
[PATCH] Proposed Fix (3.15 KB, patch)
2015-06-04 16:28 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2015-04-17 20:42:19 PDT
Nikita Vasilyev
Comment 2 2015-06-02 16:47:22 PDT
We use DOM drag-n-drop API and this could be a regression in WebKit. Looking into it.
Nikita Vasilyev
Comment 3 2015-06-02 17:23:51 PDT
Nikita Vasilyev
Comment 4 2015-06-02 20:45:30 PDT
http://trac.webkit.org/changeset/182765/trunk is likely causing the problem. Enrica, could you take a look since it was your change?
Joseph Pecoraro
Comment 5 2015-06-04 16:18:38 PDT
Seems when PageClientImpl::setDragImage makes the decision to use the WKWebView as the drag view, it needs to covert the location from WKView to WKWebView coordinates.
Joseph Pecoraro
Comment 6 2015-06-04 16:28:41 PDT
Created attachment 254313 [details] [PATCH] Proposed Fix I tested: 1. Web Inspector reproducible case above 2. HTML5 drag example (worked before and after just fine) http://html5demos.com/drag in MiniBrowser 3. Dragging an Image off webkit.org in MiniBrowser
WebKit Commit Bot
Comment 7 2015-06-04 17:31:34 PDT
Comment on attachment 254313 [details] [PATCH] Proposed Fix Clearing flags on attachment: 254313 Committed r185229: <http://trac.webkit.org/changeset/185229>
WebKit Commit Bot
Comment 8 2015-06-04 17:31:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.