Web Inspector: REGRESSION: dragged node in the DOM Tree isn't positioned correctly https://bugs.webkit.org/show_bug.cgi?id=143912

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-06-04
Reviewed by Simon Fraser.

* UIProcess/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::setDragImage):
When using the WKWebView, convert the position from the WKView's
coordinate system to the WKWebView's.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView draggingUpdated:]):
* UIProcess/API/mac/WKView.mm:
(-[WKView _dragImageForView:withImage:at:linkDrag:]):
Whitespace cleanup in original drag code.

Canonical link: https://commits.webkit.org/163708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185229 268f45cc-cd09-0410-ab3c-d52691b4dbfc