Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm
@@ -1749,7 +1749,6 @@ static WebCore::FloatPoint constrainContentOffset(WebCore::FloatPoint contentOff
 - (NSDragOperation)draggingUpdated:(id <NSDraggingInfo>)sender
 {
     return [_wkView draggingUpdated:sender];
-    
 }
 
 - (void)draggingExited:(id <NSDraggingInfo>)sender
